Simplify disabled revalidate button text
+ Also cleaning up the disabled notify button visuals

--- a/src/_scss/pages/reviewData/submissionButtons.scss
+++ b/src/_scss/pages/reviewData/submissionButtons.scss
@@ -132,5 +132,9 @@
             margin-right: rem(5);
             font-size: rem(16);
         }
+
+        &:disabled, &:disabled:hover {
+            background: none;
+        }
     }
 }
