--- a/src/_scss/layouts/validation/overlay/_button.scss
+++ b/src/_scss/layouts/validation/overlay/_button.scss
@@ -24,7 +24,7 @@
     }
     .usa-da-button-disabled {
     	@extend %overlayButton;
-    	@extend %overlayButton.btn-disabled;
+    	@extend %overlayButton, .btn-disabled;
     }
 
 }
