--- a/src/_scss/pages/addData/uploadPage/uploadPage.scss
+++ b/src/_scss/pages/addData/uploadPage/uploadPage.scss
@@ -22,7 +22,7 @@
 }
 .usa-button-disabled {
 	@extend %button;
-	@extend %button.btn-disabled;
+	@extend %button, .btn-disabled;
 }
 
 .usa-da-button-bigger {
