--- a/src/_scss/pages/history/history.scss
+++ b/src/_scss/pages/history/history.scss
@@ -92,7 +92,7 @@
         overflow: scroll;
 
         .usa-da-download {
-            @import "/../../components/buttons/_optional";
+            @import "../../components/buttons/_optional";
             @include optionalButton;
             padding: rem(10) 0;
     
