--- a/src/_scss/pages/validateData/fileItem/fileItem.scss
+++ b/src/_scss/pages/validateData/fileItem/fileItem.scss
@@ -9,7 +9,9 @@
 @mixin fileItem {
 	margin-bottom: 40px;
     position: relative;
-    @include contentBlockWrapper() &.successful {
+    @include contentBlockWrapper;
+    
+    &.successful {
         opacity: 0.3;
     }
 
