--- a/src/_scss/layouts/login/_centerBanner.scss
+++ b/src/_scss/layouts/login/_centerBanner.scss
@@ -33,7 +33,7 @@
 
     // style the text that appears on the left side
     .login-title {
-	    font-family: "Source Sans Pro", "Helvetica", "Arial", sans-serif;
+	    font-family: $font-sans;
 	    font-size: 6.0rem;
 	    line-height: 6.0rem;
 	    margin-top: 35px;
