--- a/src/_scss/sharedComponents/_sharedTooltip.scss
+++ b/src/_scss/sharedComponents/_sharedTooltip.scss
@@ -1,6 +1,6 @@
 .tooltip-content-wrapper {
     padding: rem(15);
-    font-family: 'Source Sans Pro';
+    font-family: $font-sans;
 
     h2 {
         margin: 0;
