Fixing linter errors
+ And cleaning up a couple of the simpler warnings

--- a/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
+++ b/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
@@ -13,7 +13,7 @@
     &:hover {
         border-color: $color-primary-alt-dark;
     }
-    b {
+    b, strong {
         color: $color-gray;
     }
     & .usa-da-icon-cloud-upload, & .usa-da-icon-exclamation-circle {
