Clearing out almost all uses of custom SVG icons in favor of FA ones

--- a/src/_scss/abstract/variables/colors.scss
+++ b/src/_scss/abstract/variables/colors.scss
@@ -33,6 +33,8 @@ $color-gold-light:           #f9c642; //  lighten($color-gold, 20%)
 $color-gold-lighter:         #fad980; //  lighten($color-gold, 60%)
 $color-gold-lightest:        #fff1d2; //  lighten($color-gold, 83%)
 
+$color-gold-dark:            #f0ad4e;
+
 $color-green:                #2e8540;
 $color-green-dark:           #156C27; // darken($color-green, 10%)
 $color-green-light:          #4aa564; // lighten($color-green, 20%)
