--- a/src/_scss/components/tooltip/_warningTooltip.scss
+++ b/src/_scss/components/tooltip/_warningTooltip.scss
@@ -23,7 +23,7 @@
             margin-right: rem(10);
 
             svg {
-                fill: $color-secondary;
+                color: $color-secondary;
                 width: rem(30);
                 height: rem(30);                
             }
