--- a/src/_scss/layouts/login/_topBanner.scss
+++ b/src/_scss/layouts/login/_topBanner.scss
@@ -10,7 +10,7 @@
 
         .banner-icon {
             svg {
-                color: #f0ad4e;
+                color: $color-gold-dark;
             } 
         }
     }
