--- a/src/_scss/pages/addData/_content.scss
+++ b/src/_scss/pages/addData/_content.scss
@@ -70,7 +70,7 @@
                 }
                 .fa-exclamation-triangle {
                     font-size: rem(18);
-                    color: #f0ad4e;
+                    color: $color-gold-dark;
                     float: right;
                 }
 
