--- a/src/_scss/pages/crossFile/errorBox/_overwriteButtons.scss
+++ b/src/_scss/pages/crossFile/errorBox/_overwriteButtons.scss
@@ -3,7 +3,7 @@
     width: 100%;
     padding-left: 0;
     .upload-warning {
-        margin-top: 15px;
+        margin: rem(15) 0;
     }
     .button-list {
         padding-top: 0px;
