--- a/src/_scss/pages/generateDetachedFiles/_fyPicker.scss
+++ b/src/_scss/pages/generateDetachedFiles/_fyPicker.scss
@@ -49,7 +49,7 @@
             svg {
                 width: rem(20);
                 height: rem(20);
-                fill: $color-gray;
+                color: $color-gray;
             }
         }
     }
