--- a/src/_scss/pages/generateDetachedFiles/generateDetachedFiles.scss
+++ b/src/_scss/pages/generateDetachedFiles/generateDetachedFiles.scss
@@ -41,6 +41,10 @@
         .alert-error {
             @import '../../components/alerts/_alerts';
             @include dangerAlert;
+
+            div {
+                display: inline-block;
+            }
         }
 
         // style the icons
