--- a/src/_scss/pages/modals/reviewData/_certifyModal.scss
+++ b/src/_scss/pages/modals/reviewData/_certifyModal.scss
@@ -68,7 +68,7 @@
 			font-size: rem(18);
 		}
 		.fa-exclamation-triangle {
-			color: #f0ad4e;
+			color: $color-gold-dark;
 			margin-right: rem(5);
 		}
 	}
