--- a/src/_scss/pages/modals/reviewData/_certifyProgress.scss
+++ b/src/_scss/pages/modals/reviewData/_certifyProgress.scss
@@ -23,4 +23,8 @@
 .alert-danger {
 	@import "../../../components/alerts/_alerts";
 	@include dangerAlert;
+
+	div {
+		display: inline-block;
+	}
 }
