--- a/src/_scss/pages/modals/sharedModal.scss
+++ b/src/_scss/pages/modals/sharedModal.scss
@@ -54,7 +54,7 @@
             }
             .fa-exclamation-triangle {
                 font-size: rem(25);
-                color: #f0ad4e;
+                color: $color-gold-dark;
                 float: left;
                 margin-left: 17px;
                 margin-top: 6px;
