--- a/src/_scss/pages/landing/blocks/_blockItem.scss
+++ b/src/_scss/pages/landing/blocks/_blockItem.scss
@@ -19,20 +19,13 @@
         margin: 0 10px;
     }
     .usa-da-landing-block-icon {
-        padding-top: 0px;
-        padding-bottom: 20px;
-        @media(min-width: $medium-screen) {
-            padding-top: 10px;
-        }
+        font-size: rem(44);
+        padding-bottom: rem(15);
         svg {
-            margin: 0 10px 0 0;
             display: inline-block;
             position: relative;
             top: 5px;
-            left: 2px;
-            height: 4.5rem;
-            width: 4.8rem;
-            fill: $color-gray;
+            color: $color-gray;
         }
     }
     .usa-da-landing-block-bottom {
