Initial setup of new buttons and click handlers

--- a/src/_scss/layouts/login/login.scss
+++ b/src/_scss/layouts/login/login.scss
@@ -32,4 +32,10 @@
 		// implement the login form styles
 		@include loginForm;
 	}
+
+	.usa-da-button {
+		&.bottom-login-button {
+			margin-top: rem(15);
+		}
+	}
 }
