Preventing file A from being uploaded in the initial upload for a DABS submission

--- a/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
+++ b/src/_scss/pages/addData/uploadPage/_uploadDropzone.scss
@@ -61,4 +61,16 @@
     .progress {
         margin-top: 10px;
     }
+
+    &.non-interactive {
+        cursor: not-allowed;
+
+        svg {
+            color: $color-gray;
+        }
+
+        &:hover {
+            border-color: #c8cfd7;
+        }
+    }
 }
