Updating DABS Dashboard FiscalYears to use consistent <li>s

--- a/src/_scss/pages/dashboard/filters/_fiscalYears.scss
+++ b/src/_scss/pages/dashboard/filters/_fiscalYears.scss
@@ -7,6 +7,9 @@
         .fiscal-years__wrapper {
             @include display(flex);
         }
+        .fiscal-years__wrapper ul {
+            margin: rem(0);
+        }
         .fiscal-years__left {
             @include display(flex);
             @include flex(1 1 auto);
